kustomizations/home-assistant/ring-mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ring-mqtt
spec:
  rules:
  - host: ringmqtt.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ring-mqtt
              port:
                number: 55123
